# sinkchart

./: .gitignore  AUTHORS  CHANGELOG.md  CLAUDE.md  COPYRIGHT  Cargo.toml  NOTICE  README.md  _typos.toml  clippy.toml  cog.toml  deny.toml  maskfile.md  mise.toml  rust-toolchain.toml
crates/common/: Cargo.toml  README.md
crates/common/src/: lib.rs
crates/core/: Cargo.toml  README.md
crates/core/src/: lib.rs
crates/integrations/: Cargo.toml  README.md
crates/integrations/src/: lib.rs
crates/plugins/: Cargo.toml  README.md
crates/plugins/src/: lib.rs
crates/tauri-app/: Cargo.toml  README.md  tauri.conf.json
crates/tauri-app/src/: main.rs
crates/ui/: Cargo.toml  README.md
crates/ui/src/: lib.rs
docs/: ARCHITECTURE.md  COMPLIANCE.md  LICENSE.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_target_1.rs
scripts/: bootstrap.ps1  bootstrap.sh
