[workspace]
members = [
    "crates/core",
    "crates/ui",
    "crates/tauri-app",
    "crates/plugins",
    "crates/common",
    "crates/integrations",
]
exclude = [
    "fuzz",  # Fuzzing targets are kept separate from the main workspace
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
authors = ["Pierre Fouilloux", "SinkChart Contributors", "Hibiscus Collective"]
repository = "https://github.com/HibiscusCollective/sinkchart"
homepage = "https://github.com/HibiscusCollective/sinkchart"
description = "Plugin-based map management tool for video game exploration"
keywords = ["gaming", "maps", "exploration", "annotations"]
categories = ["games", "visualization"]

[workspace.dependencies]
# Core shared dependencies (used by 3+ crates)
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
thiserror = "2.0"
anyhow = "1.0"
log = "0.4"

# Security configuration at workspace level
[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"
unused_import_braces = "warn"
unused_qualifications = "warn"
trivial_casts = "warn"
trivial_numeric_casts = "warn"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
cargo = "warn"
# Security-focused lints
integer_overflow = "deny"
panic = "deny"
unwrap_used = "deny"
expect_used = "deny"
indexing_slicing = "deny"
# Allow some pedantic lints that are too restrictive
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"