[package]
name = "sinkchart-common"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Shared utilities for SinkChart"
readme = "README.md"

[dependencies]
# Common-specific dependencies
toml = "0.8"
directories = "6.0"
config = { version = "0.15", features = ["toml", "json"] }
camino = "1.1"
# Shared dependencies
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
log.workspace = true

[lints]
workspace = true