[package]
name = "sinkchart-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Core business logic for SinkChart map management"
readme = "README.md"

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
log.workspace = true
# Core-specific dependencies
uuid = { version = "1.17", features = ["v4", "serde"] }
parking_lot = "0.12"
smallvec = "1.15"

[lints]
workspace = true