[package]
name = "sinkchart-plugins"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Plugin system for SinkChart"
readme = "README.md"

[dependencies]
# Plugin-specific dependencies
libloading = "0.8"
inventory = "0.3"
async-trait = "0.1"
# Shared dependencies
sinkchart-core = { path = "../core" }
serde.workspace = true
thiserror.workspace = true
anyhow.workspace = true
log.workspace = true

[lints]
workspace = true