[package]
name = "sinkchart-ui"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Dioxus UI components for SinkChart"
readme = "README.md"
publish = false

[dependencies]
dioxus.workspace = true
sinkchart-core = { path = "../core" }
serde.workspace = true
thiserror.workspace = true