[package]
name = "sinkchart-ui"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Dioxus UI components for SinkChart"
readme = "README.md"
publish = false

[dependencies]
# UI-specific Dioxus dependencies
dioxus = "0.7.0-alpha"
dioxus-desktop = "0.7.0-alpha"
dioxus-router = "0.7.0-alpha"
dioxus-signals = "0.7.0-alpha"
dioxus-hooks = "0.7.0-alpha"
# Shared dependencies
sinkchart-core = { path = "../core" }
serde.workspace = true
thiserror.workspace = true
anyhow.workspace = true
log.workspace = true

[lints]
workspace = true